#FILE(GLOB PNGFILES resources/*.png )
#FILE(GLOB JPEGFILES resources/*.jpg )
#FILE(GLOB SVGFILES resources/*.svg )
#FILE(GLOB CFG main.cfg)
#FILE(GLOB LAYOUT layout.xml)
#FILE(GLOB MDPI resources/mdpi/*.png)
#FILE(GLOB HDPI resources/hdpi/*.png)

#FILE(GLOB HDPI_ACTION_ICONS resources/hdpi/actions/*.png)

#FILE(GLOB HDPI_NAV_ICONS resources/hdpi/actions/*.png)
#FILE(GLOB MDPI_NAV_ICONS resources/hdpi/navigation/*.png)

#if (NOT APPLE)
#INSTALL(FILES ${PNGFILES}  DESTINATION ${RESOURCES_DEST_DIR})
#INSTALL(FILES ${JPEGFILES}  DESTINATION ${RESOURCES_DEST_DIR})
#INSTALL(FILES ${SVGFILES}  DESTINATION ${RESOURCES_DEST_DIR})
#INSTALL(FILES ${HDPI}  DESTINATION ${RESOURCES_DEST_DIR}/hdpi)

#INSTALL(FILES ${HDPI_ACTION_ICONS}  DESTINATION ${RESOURCES_DEST_DIR}/hdpi/actions)
#INSTALL(FILES ${HDPI_ACTION_ICONS}  DESTINATION ${RESOURCES_DEST_DIR}/hdpi/actions)

#INSTALL(FILES ${MDPI}  DESTINATION ${RESOURCES_DEST_DIR}/mdpi)
#INSTALL(FILES ${CFG}  DESTINATION share/plexy/themepack/default)
#INSTALL(FILES ${LAYOUT}  DESTINATION share/plexy/themepack/default)
#endif (NOT APPLE)


####################### APPLE ONLY #################################
#if (APPLE)
#INSTALL(FILES ${PNGFILES}  DESTINATION ${RESOURCES_DEST_DIR})
#INSTALL(FILES ${JPEGFILES}  DESTINATION ${RESOURCES_DEST_DIR})
#INSTALL(FILES ${SVGFILES}  DESTINATION ${RESOURCES_DEST_DIR})
#INSTALL(FILES ${HDPI}  DESTINATION ${RESOURCES_DEST_DIR}/hdpi)
#INSTALL(FILES ${HDPI_ACTION_ICONS}  DESTINATION ${RESOURCES_DEST_DIR}/hdpi/actions)
#INSTALL(FILES ${MDPI}  DESTINATION ${RESOURCES_DEST_DIR}/mdpi)
#INSTALL(FILES ${CFG}  DESTINATION plexydesk.app/Contents/share/plexy/themepack/default)
#INSTALL(FILES ${LAYOUT}  DESTINATION plexydesk.app/Contents/share/plexy/themepack/default)
#endif(APPLE)
